@@ -1,3 +1,7 @@
+2017-07-31 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Use default evaluation options with approximate calculation in plot function
+
 2017-07-29 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix 3(x+1)(x+y)^3 to factors = 81((x + y) / 3)^3 * (x + 1)
